[package]
name = "kwata"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.144", features = ["derive"] }
chrono = { version = "0.4.33", features = ["serde"] }
kong = { git = "https://github.com/cy6erlion/kong.git"}
kommon = { git = "https://github.com/cy6erlion/kommon.git"}
#finspider = { git = "https://github.com/cy6erlion/finspider.git", features = ["finacials", "postgres"]}
finspider = { path = "../spider", features = ["finacials", "postgres"]}
postgres = { version = "0.19.7", features = ["with-chrono-0_4", "with-serde_json-1"]}
postgres-openssl = "0.5.0"
openssl = "0.10.64"